force-app/main/default/objects/Case/fields/OBJETS__c.field-meta.xml
<CustomField>
    <fullName>OBJETS__c</fullName>
    <label>OBJETS 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3000</fullName>
                <label>Annulation client</label>
            </value>
            <value>
                <fullName>3001</fullName>
                <label>Erreur hôtel</label>
            </value>
            <value>
                <fullName>3002</fullName>
                <label>Modification client</label>
            </value>
            <value>
                <fullName>3003</fullName>
                <label>Echec paiement hôtel</label>
            </value>
            <value>
                <fullName>3004</fullName>
                <label>Factures</label>
            </value>
            <value>
                <fullName>3005</fullName>
                <label>Relevé mensuel</label>
            </value>
            <value>
                <fullName>3006</fullName>
                <label>Problème Identification/Internet</label>
            </value>
            <value>
                <fullName>3007</fullName>
                <label>Compliment SRC</label>
            </value>
            <value>
                <fullName>3008</fullName>
                <label>Compliment Accueil</label>
            </value>
            <value>
                <fullName>3009</fullName>
                <label>Compliment Hôtel</label>
            </value>
            <value>
                <fullName>3010</fullName>
                <label>Compliment sur la réponse</label>
            </value>
            <value>
                <fullName>3011</fullName>
                <label>Impayé Eclub</label>
            </value>
            <value>
                <fullName>3012</fullName>
                <label>Divers Avis Clients</label>
            </value>
            <value>
                <fullName>3013</fullName>
                <label>Dédommagement</label>
            </value>
            <value>
                <fullName>3014</fullName>
                <label>Réponse du gérant</label>
            </value>
            <value>
                <fullName>3015</fullName>
                <label>Bug du site</label>
            </value>
            <value>
                <fullName>3016</fullName>
                <label>Débit frauduleux</label>
            </value>
            <value>
                <fullName>3017</fullName>
                <label>Erreur du client</label>
            </value>
            <value>
                <fullName>3018</fullName>
                <label>Annulation/modif pour imprévu</label>
            </value>
            <value>
                <fullName>3019</fullName>
                <label>Conditions de la promo</label>
            </value>
            <value>
                <fullName>3021</fullName>
                <label>accueil</label>
            </value>
            <value>
                <fullName>3022</fullName>
                <label>pas de réservation</label>
            </value>
            <value>
                <fullName>3023</fullName>
                <label>erreur de résa</label>
            </value>
            <value>
                <fullName>3024</fullName>
                <label>erreur de paramétrage</label>
            </value>
            <value>
                <fullName>3025</fullName>
                <label>site web</label>
            </value>
            <value>
                <fullName>3026</fullName>
                <label>Divers récla</label>
            </value>
            <value>
                <fullName>3027</fullName>
                <label>N° surtaxé</label>
            </value>
            <value>
                <fullName>3028</fullName>
                <label>Dde infos résa</label>
            </value>
            <value>
                <fullName>3029</fullName>
                <label>Accueil à l&apos;arrivée</label>
            </value>
            <value>
                <fullName>3030</fullName>
                <label>Localisation/accessibilité/GPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>