force-app/main/default/objects/Case/fields/Person_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Person_to_contact__c</fullName>
    <label>Person to contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>