force-app/main/default/objects/Case/fields/PersonContactId__c.field-meta.xml
<CustomField>
    <fullName>PersonContactId__c</fullName>
    <formula>CASESAFEID(Account.PersonContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PersonContactId</label>
    <type>Text</type>
</CustomField>