force-app/main/default/objects/Case/fields/Petit_D_jeuner_Adulte__c.field-meta.xml
<CustomField>
    <fullName>Petit_D_jeuner_Adulte__c</fullName>
    <label>Petit Déjeuner Adulte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>