force-app/main/default/objects/Case/fields/Points_Fid_lit__c.field-meta.xml
<CustomField>
    <fullName>Points_Fid_lit__c</fullName>
    <formula>Account.E_club_Number_of_points__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Fidélité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>