force-app/main/default/objects/Case/fields/Reason_for_deletion__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_deletion__c</fullName>
    <label>Reason for deletion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hate speech</fullName>
            </value>
            <value>
                <fullName>Incorrect facts</fullName>
            </value>
            <value>
                <fullName>Individual insult</fullName>
            </value>
            <value>
                <fullName>Racist or sexual content</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>