force-app/main/default/objects/Case/fields/Reason_for_refusing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_refusing__c</fullName>
    <label>Reason for refusing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>