force-app/main/default/objects/Case/fields/Refund_Information__c.field-meta.xml
<CustomField>
    <fullName>Refund_Information__c</fullName>
    <label>Refund Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>