force-app/main/default/objects/Case/fields/Request_channel__c.field-meta.xml
<CustomField>
    <fullName>Request_channel__c</fullName>
    <label>Request channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>