force-app/main/default/objects/Case/fields/Request_sent_on__c.field-meta.xml
<CustomField>
    <fullName>Request_sent_on__c</fullName>
    <label>Request sent on</label>
    <type>Date</type>
</CustomField>