force-app/main/default/objects/Case/fields/reservation_number__c.field-meta.xml
<CustomField>
    <fullName>reservation_number__c</fullName>
    <label>Reservation Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>