force-app/main/default/objects/Case/fields/ReservationNumber__c.field-meta.xml
<CustomField>
    <fullName>ReservationNumber__c</fullName>
    <description>Booking Reservation Number</description>
    <label>Reservation number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>