force-app/main/default/objects/Case/fields/Responsabilit__c.field-meta.xml
<CustomField>
    <fullName>Responsabilit__c</fullName>
    <label>Responsabilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chaine</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>