force-app/main/default/objects/Case/fields/Review_Content__c.field-meta.xml
<CustomField>
    <fullName>Review_Content__c</fullName>
    <label>Review Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>