force-app/main/default/objects/Case/fields/Review_login__c.field-meta.xml
<CustomField>
    <fullName>Review_login__c</fullName>
    <label>Review login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>