force-app/main/default/objects/Case/fields/Review_subject__c.field-meta.xml
<CustomField>
    <fullName>Review_subject__c</fullName>
    <label>Review subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>