force-app/main/default/objects/Case/fields/Room_type__c.field-meta.xml
<CustomField>
    <fullName>Room_type__c</fullName>
    <label>Room type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>