force-app/main/default/objects/Case/fields/Sent_an_email__c.field-meta.xml
<CustomField>
    <fullName>Sent_an_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you check this box, an e-mail stating that the request is closed will be sent to the customer.</inlineHelpText>
    <label>Sent an email</label>
    <type>Checkbox</type>
</CustomField>