force-app/main/default/objects/Case/fields/Tech_case_queue__c.field-meta.xml
<CustomField>
    <fullName>Tech_case_queue__c</fullName>
    <label>Tech case queue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>