force-app/main/default/objects/Case/fields/Tech_Closing_Year__c.field-meta.xml
<CustomField>
    <fullName>Tech_Closing_Year__c</fullName>
    <formula>YEAR(DATEVALUE(ClosedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>