force-app/main/default/objects/Case/fields/tech_NumberOfIR__c.field-meta.xml
<CustomField>
    <fullName>tech_NumberOfIR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>tech_NumberOfIR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>