force-app/main/default/objects/Case/fields/Tech_old_queu_name__c.field-meta.xml
<CustomField>
    <fullName>Tech_old_queu_name__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech old queu name</label>
    <type>Text</type>
</CustomField>