force-app/main/default/objects/Case/fields/TechChangeOwner__c.field-meta.xml
<CustomField>
    <fullName>TechChangeOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_ChangeOwner</label>
    <type>Checkbox</type>
</CustomField>