force-app/main/default/objects/Case/fields/ThreadId_Case__c.field-meta.xml
<CustomField>
    <fullName>ThreadId_Case__c</fullName>
    <formula>&apos;ref:_&apos; &amp; LEFT($Organization.Id, 5) &amp;  MID($Organization.Id, 12, 4) &amp; &apos;._&apos; + LEFT(Id, 5) &amp; MID(Id, 10, 5) &amp; &apos;:ref&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ThreadId_Case</label>
    <type>Text</type>
</CustomField>