force-app/main/default/objects/Case/fields/Treatment_date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_date__c</fullName>
    <description>Treatment date = creation date, but this information is modifiable by the agent.</description>
    <inlineHelpText>You can modify this information</inlineHelpText>
    <label>Treatment date</label>
    <type>Date</type>
</CustomField>