force-app/main/default/objects/Case/fields/Type_D_dommagement__c.field-meta.xml
<CustomField>
    <fullName>Type_D_dommagement__c</fullName>
    <label>Type Dédommagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avoir</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
            <value>
                <fullName>Rbt/Invit</fullName>
            </value>
            <value>
                <fullName>Remboursement</fullName>
            </value>
            <value>
                <fullName>régul eclub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>