force-app/main/default/objects/Case/fields/TYPES_3__c.field-meta.xml
<CustomField>
    <fullName>TYPES_3__c</fullName>
    <label>TYPES 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Types</valueSetName>
    </valueSet>
</CustomField>