force-app/main/default/objects/Case/fields/TYPES__c.field-meta.xml
<CustomField>
    <fullName>TYPES__c</fullName>
    <label>TYPES 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
                <label>Annulation/modification</label>
            </value>
            <value>
                <fullName>2001</fullName>
                <label>Facturation CL</label>
            </value>
            <value>
                <fullName>2002</fullName>
                <label>Problème Identification/Internet</label>
            </value>
            <value>
                <fullName>2003</fullName>
                <label>Compliments</label>
            </value>
            <value>
                <fullName>2004</fullName>
                <label>Compliments Avis Clients</label>
            </value>
            <value>
                <fullName>2005</fullName>
                <label>Recouvrement</label>
            </value>
            <value>
                <fullName>2006</fullName>
                <label>AVIS CLIENTS</label>
            </value>
            <value>
                <fullName>2007</fullName>
                <label>OFFRES PROMOS</label>
            </value>
            <value>
                <fullName>2008</fullName>
                <label>SPECIAL EVENT</label>
            </value>
            <value>
                <fullName>2009</fullName>
                <label>OFFRE NOEL</label>
            </value>
            <value>
                <fullName>2010</fullName>
                <label>OFFRE NOW</label>
            </value>
            <value>
                <fullName>2011</fullName>
                <label>RESERVATION</label>
            </value>
            <value>
                <fullName>2012</fullName>
                <label>ARRIVEE SUR LE SITE</label>
            </value>
            <value>
                <fullName>2013</fullName>
                <label>PARTIES COMMUNES</label>
            </value>
            <value>
                <fullName>2014</fullName>
                <label>LA CHAMBRE ET LA SALLE DE BAIN</label>
            </value>
            <value>
                <fullName>2015</fullName>
                <label>RESTAURATION DISNEY</label>
            </value>
            <value>
                <fullName>2016</fullName>
                <label>LE PETIT DEJEUNER</label>
            </value>
            <value>
                <fullName>2017</fullName>
                <label>FACTURATION</label>
            </value>
            <value>
                <fullName>2018</fullName>
                <label>DOMMAGES /SINISTRES</label>
            </value>
            <value>
                <fullName>2019</fullName>
                <label>RBT</label>
            </value>
            <value>
                <fullName>2020</fullName>
                <label>CLUB</label>
            </value>
            <value>
                <fullName>2021</fullName>
                <label>Signalement client</label>
            </value>
            <value>
                <fullName>2022</fullName>
                <label>Signalement hôtelier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>