force-app/main/default/objects/Case/fields/Voucher_Nr__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Nr__c</fullName>
    <label>Voucher Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>