force-app/main/default/objects/Case/fields/Voucher_Product__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Product__c</fullName>
    <label>Voucher Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Bed &amp; Breakfast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>