force-app/main/default/objects/Case/fields/Voucher_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Quantity__c</fullName>
    <label>Voucher Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>