force-app/main/default/objects/Case/fields/X1_Service_en_charge__c.field-meta.xml
<CustomField>
    <fullName>X1_Service_en_charge__c</fullName>
    <label>1 - Service en charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Call center</fullName>
            </value>
            <value>
                <fullName>Dommages/sinistres</fullName>
            </value>
            <value>
                <fullName>E-club</fullName>
            </value>
            <value>
                <fullName>Hygiène et sécurié</fullName>
            </value>
            <value>
                <fullName>Hôtel</fullName>
            </value>
            <value>
                <fullName>Hôtel / call center</fullName>
            </value>
            <value>
                <fullName>Informatique CB</fullName>
            </value>
            <value>
                <fullName>Informatique DAC</fullName>
            </value>
            <value>
                <fullName>Informatique HOT</fullName>
            </value>
            <value>
                <fullName>Informatique WEB</fullName>
            </value>
            <value>
                <fullName>Informatique WIFI</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Maintenance ou reno</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Maximiles</fullName>
            </value>
            <value>
                <fullName>Produit</fullName>
            </value>
            <value>
                <fullName>Produit JM</fullName>
            </value>
            <value>
                <fullName>Rénovation</fullName>
            </value>
            <value>
                <fullName>Web design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>