force-app/main/default/objects/Case/fields/X2_Personne_s_alerter__c.field-meta.xml
<CustomField>
    <fullName>X2_Personne_s_alerter__c</fullName>
    <label>2 - Personne(s) à alerter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>