force-app/main/default/objects/Case/recordTypes/Case_linked_to_IR.recordType-meta.xml
<RecordType>
    <fullName>Case_linked_to_IR</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Case linked to IR</label>
</RecordType>