force-app/main/default/objects/Case/recordTypes/Company_Request.recordType-meta.xml
<RecordType>
    <fullName>Company_Request</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Company Request</label>
</RecordType>