force-app/main/default/objects/Case/recordTypes/Customer_damages.recordType-meta.xml
<RecordType>
    <fullName>Customer_damages</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Customer damages</label>
</RecordType>