force-app/main/default/objects/Case/recordTypes/Customers_Request_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Customers_Request_Feedback</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Customers Request/ Feedback</label>
</RecordType>