force-app/main/default/objects/Case/recordTypes/Customers_Request_Feedback_Germany.recordType-meta.xml
<RecordType>
    <fullName>Customers_Request_Feedback_Germany</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Customers Request/ Feedback (Germany)</label>
</RecordType>