force-app/main/default/objects/Case/recordTypes/Group_Request.recordType-meta.xml
<RecordType>
    <fullName>Group_Request</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Group Request</label>
</RecordType>