force-app/main/default/objects/Case/recordTypes/Reviews_Deletion.recordType-meta.xml
<RecordType>
    <fullName>Reviews_Deletion</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <label>Reviews Deletion/Modification</label>
</RecordType>