force-app/main/default/objects/Case/recordTypes/Siebel_Migration.recordType-meta.xml
<RecordType>
    <fullName>Siebel_Migration</fullName>
    <active>true</active>
    <businessProcess>Case process</businessProcess>
    <description>A new record type and page layout had been created specifically for the migration of the cases from Siebel</description>
    <label>Siebel Migration</label>
</RecordType>