force-app/main/default/objects/Case/validationRules/VR01_Case_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Case_Closed</fullName>
    <active>true</active>
    <description>When a status is changed to &quot;close&quot;, re open a cas is not permissible.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; IsClosed &amp;&amp; !$User.BypassValidationRule__c</errorConditionFormula>
    <errorMessage>A closed case cannot be reopened.</errorMessage>
</ValidationRule>