force-app/main/default/objects/Case/listViews/All_cases.listView-meta.xml
<ListView>
    <fullName>All_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All cases</label>
</ListView>