force-app/main/default/objects/Case/listViews/Demande_B_B_Club_Case.listView-meta.xml
<ListView>
    <fullName>Demande_B_B_Club_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Demande B&amp;B Club</label>
    <queue>Demande_B_B_Club</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>