force-app/main/default/objects/Case/listViews/Demandes_d_assistance_Case.listView-meta.xml
<ListView>
    <fullName>Demandes_d_assistance_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Demandes d&apos;assistance</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>