force-app/main/default/objects/Case/listViews/French_Queue_Hotel_Case_Case.listView-meta.xml
<ListView>
    <fullName>French_Queue_Hotel_Case_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>French Queue hotel case</label>
    <queue>French_Queue_Hotel_Case</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>