force-app/main/default/objects/Case/listViews/French_service_agent_Case.listView-meta.xml
<ListView>
    <fullName>French_service_agent_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>French service Agent</label>
    <language>en_US</language>
    <queue>French_service_Agent</queue>
    <sharedTo>
        <role>French_Commercial_Agent</role>
        <role>French_Services_Manager</role>
    </sharedTo>
</ListView>