force-app/main/default/objects/Case/listViews/Garantie_RI_Cases.listView-meta.xml
<ListView>
    <fullName>Garantie_RI_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Garantie-RI</value>
    </filters>
    <label>Garantie-RI Cases</label>
</ListView>